@@ -13,7 +13,6 @@ import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.validation.Valid;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.hibernate.Hibernate;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -140,7 +139,7 @@ public class CompanyController {
             @Valid @RequestBody List<@Valid CompanyDto> companyDtos) {
         List<Company> companies = companyDtos.stream()
                 .map(companyMapper::toEntity)
-                .collect(Collectors.toList());
+                .toList();
 
         List<Company> createdCompanies = companyService.createCompanies(companies);
 
