@@ -14,7 +14,6 @@ import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.validation.Valid;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.DeleteMapping;
@@ -76,7 +75,7 @@ public class ReviewController {
             @Valid @RequestBody List<@Valid ReviewDto> reviewDtos) {
         List<Review> reviews = reviewDtos.stream()
                 .map(reviewMapper::toEntity)
-                .collect(Collectors.toList());
+                .toList();
 
         List<Review> createdReviews = reviewService.createReviews(gameId, reviews);
 
